--- a/src/plonetheme/future_imperfect/theme/less/default.css
+++ b/src/plonetheme/future_imperfect/theme/less/default.css
@@ -1,4 +1,4 @@
-@import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Raleway:400,800,900");
+@import url("//fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Raleway:400,800,900");
 
 /*
 	Future Imperfect by HTML5 UP
@@ -1996,7 +1996,7 @@
 			 input[type="radio"] + label:before {
 				/* background: rgba(160, 160, 160, 0.075);
 				border: solid 1px rgba(160, 160, 160, 0.3);
-				cosmetic hiding of the 
+				cosmetic hiding of the
 				faux-checkbox and faux-radio */
 				content: '';
 				display: inline-block;
@@ -2009,7 +2009,7 @@
 				width: 1.65em;
 			}
 
-		/* disable checked faux-checkbox and radio 
+		/* disable checked faux-checkbox and radio
 		input[type="checkbox"]:checked + label:before,
 		input[type="radio"]:checked + label:before {
 			background: #3c3b3b;
@@ -2017,7 +2017,7 @@
 			color: #ffffff;
 			content: '\f00c';
 		}
-        
+
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
 			border-color: #2ebaae;
