--- a/src/plonetheme/future_imperfect/theme/styles/main.css
+++ b/src/plonetheme/future_imperfect/theme/styles/main.css
@@ -9,7 +9,7 @@
 /* Import Plone styling
    ========================================================================== */
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
-@import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Raleway:400,800,900");
+@import url("//fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Raleway:400,800,900");
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -8141,7 +8141,7 @@ input[type="checkbox"] + label:before,
 input[type="radio"] + label:before {
   /* background: rgba(160, 160, 160, 0.075);
 				border: solid 1px rgba(160, 160, 160, 0.3);
-				cosmetic hiding of the 
+				cosmetic hiding of the
 				faux-checkbox and faux-radio */
   content: '';
   display: inline-block;
@@ -8153,7 +8153,7 @@ input[type="radio"] + label:before {
   top: 0;
   width: 1.65em;
 }
-/* disable checked faux-checkbox and radio 
+/* disable checked faux-checkbox and radio
 		input[type="checkbox"]:checked + label:before,
 		input[type="radio"]:checked + label:before {
 			background: #3c3b3b;
@@ -8161,7 +8161,7 @@ input[type="radio"] + label:before {
 			color: #ffffff;
 			content: '\f00c';
 		}
-        
+
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
 			border-color: #2ebaae;
