KKDay-Plone-202001091149-Update style search box

--- a/src/plonetheme/future_imperfect/theme/less/main.less
+++ b/src/plonetheme/future_imperfect/theme/less/main.less
@@ -98,3 +98,7 @@
 @import "partials/pagination.less";
 @import "partials/breadcrumbs.less";
 @import "partials/footer.less";
+
+/* Custom less files
+   ========================================================================== */
+@import "style.less";
